@@ -2,6 +2,8 @@ v2.7.8   - Fixed hangs and crashes on playback of single images in EDL.
 	 - Fixed file requester not showing negative frames correctly.
 	 - Fixed file association for jpg, png, tiff, and others on Linux 
 	   installers.
+	 - ImageMagick savers now save out gamma information without 
+	   baking it in.
 
 v2.7.7   - Clamped values of ITU 709 as it could result in overflows and
 	   saturated colors.
